# sales-analytics

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml  scratch
backend/alembic/: env.py
backend/alembic/versions/: afea85b414b9_create_sales_transactions_table.py
backend/app/: main.py  realtime.py  schemas.py
backend/app/models/: models.py
backend/app/service/: currency.py  realtime.py
backend/db/: __init__.py  sample_data.py
backend/scripts/: add_sample_data.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: AddSalesTransaction.js  RealtimeSales.js  RevenueChart.js  SalesOverview.js  TopRegions.js  TopSalesPeople.js
frontend/src/config/: constants.js
