[tool.poetry]
name = "sales-analytics-service"
version = "0.1.0"
description = "Backend Service to Serve Real Time Sales Analytics Dashboard"
authors = ["upagupta2003 <upagupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.10"
sqlalchemy = "^2.0.38"
pandas = "^2.2.3"
numpy = "^2.2.3"
pydantic = "^2.10.6"
money = "^1.3.0"
uvicorn = "^0.27.0"
py-money = "^0.5.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
faker = "^22.5.0"
redis = "^5.0.1"
fastapi-cache2 = "^0.2.1"
websockets = "^12.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
